# document-clustering

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  Untitled.ipynb  arxiv_dataset.md  arxiv_dataset.py  environment.yml  generate_sample.py  main.py  noxfile.py  pdf_extract.py  pyproject.toml  silhouette_analysis.ipynb  silhouette_analysis.py  utils.py
doc/: arxiv_dataset.md  text_extraction.md
hatch/document-clustering/: LICENSE.txt  README.md
hatch/document-clustering/src/document_clustering/: __about__.py
old/2019-beta-writer/: README.md
old/2021-beta-writer/: README.md  mkstructure_html.py  plot.py  text_processing.py
sample/: test_sample.txt
src/document_clustering/: Untitled.ipynb  __about__.py  __init__.py  arxiv_dataset.py  clustering.py  generate_sample.py  main.py  pdf_extract.py  preprocessing.py  silhouette_analysis.ipynb  utils.py
src/document_clustering/sample/: 50_ids.txt
tests/: __init__.py  test_arxiv_dataset.py  test_import_all.py
