[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-clustering"
version = "0.1.0"
description = 'Clustering documents according to document similarity, with a focus on scientific publications'
readme = "README.md"
requires-python = ">=3.9" # 3.9 Support wird für Neuron gebraucht
license = "MIT"
keywords = []
authors = [
  { name = "Leona Gottfried", email = "61663141+leogott@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "feedparser",
  "matplotlib",
  "numpy",
  "pandas",
  "python-poppler",
  "scikit-learn",
]

[project.urls]
Documentation = "https://github.com/unknown/document-clustering#readme"
Issues = "https://github.com/unknown/document-clustering/issues"
Source = "https://github.com/unknown/document-clustering"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/document_clustering tests}"

[tool.hatch.envs.hatch-static-analysis]
# config-path = "ruff_defaults.toml"

[tool.coverage.run]
source_pkgs = ["document_clustering", "tests"]
branch = true
parallel = true
omit = [
  "src/document_clustering/__about__.py",
]

[tool.coverage.paths]
document_clustering = ["src/document_clustering", "*/document-clustering/src/document_clustering"]
tests = ["tests", "*/document-clustering/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.format]
preview=true

[tool.ruff.lint]
preview = true
ignore = []
extend-select = [
  "ARG",
  "F",
  "C901", #McCabe complexity
]
extend-ignore = ["G004"]

[tool.ruff.lint.extend-per-file-ignores]
"src/*/main.py" = ["T201"]
